--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,16 @@ Cargo.lock
 *.pdb
 
 compose-dev.yaml
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
