--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,5 @@
-[package]
-name = "ssbm-utils"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+members = ["./ssbm-utils", "./ssbm-utils-rs", "./py-ssbm-utils"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-polars = { version = "0.31.1", features = ["dtype-u8", "lazy"] }
-lazy_static = "1.4.0"
-strum = "0.25.0"
-strum_macros = "0.25.1"
-num_enum = "0.6.1"
-nohash-hasher = "0.2.0"
-approx = "0.5.1"
+[profile.dev.package."*"]
+opt-level = 3
